--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
+    "node-notifier": "^6.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^3.2.0",
